kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marketplace 
  labels:
    name: marketplace
