kubernetes/deployment.yaml
# ConfigMap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: marketplace
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:A
        app: backend
    spec:
      containers:
      - name: marketplace-backend
        image: petarvelevski/node-backend:latest 
        ports:
        - containerPort: 3000 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: marketplace
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: marketplace-frontend
        image: petarvelevski/vue-frontend:latest 
        ports:
        - containerPort: 8080
