kubernetes/statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  namespace: marketplace
spec:
  serviceName: "mongodb-service"  
  replicas: 1
  selector:
    matchLabels:
      app: mongodb  
  template:
    metadata:
      labels:
        app: mongodb  
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
